artifactory-ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: artifactory-ingress
    namespace: artifactory
  spec:
    ingressClassName: nginx
    rules:
      - host: 172-105-45-200.ip.linodeusercontent.com
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: artifactory
                  port:
                    number: 8082
